modern wheel, paypal, location tracking

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,10 +2,13 @@
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
         <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+        <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
     <application
         android:label="my_widgets"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+         <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyA3FVTYIskKF_ubSF8A6KKcI0n0unlW9ZU"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
