--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,8 @@ dependencies:
   build_runner: ^2.4.6
   freezed: ^2.4.2
   json_serializable: ^6.7.1
+  flutter_swipable: ^1.2.1
+  flutter_card_swiper: ^6.0.0
 
 
 dev_dependencies:
