--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ dependencies:
   json_serializable: ^6.7.1
   flutter_swipable: ^1.2.1
   flutter_card_swiper: ^6.0.0
+  azlistview: ^2.0.0
 
 
 dev_dependencies:
