--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,19 +83,27 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   flutter_lints: ^2.0.2
-  build_runner: ^2.4.6
-  freezed: ^2.4.2
+  freezed: ^2.4.1
   json_serializable: ^6.7.1
   flutter_swipable: ^1.2.1
   flutter_card_swiper: ^6.0.0
   azlistview: ^2.0.0
   animations: ^2.0.8
   flutter_jailbreak_detection: ^1.10.0
+  webview_flutter: ^4.2.4
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
+  integration_test:
+    sdk: flutter    
+  build_runner: ^2.4.6
+  mockito: ^5.4.2
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
